# cs-5330-final-project

./: .gitignore  README.md  assignment.md  pyproject.toml
docs/: datasets-and-simulators.md  implementation.md  papers.md  project-ideas.md  research.md  stage0.md  stage1.md
report/: proposal.tex
scripts/: check_rgb_bgr.py  diagnose_stage1.py  download_datasets.py  smoke_test_stage0.py  smoke_test_stage1.py
src/collision_avoidance/: __init__.py  config.py  detection.py  frame.py
src/collision_avoidance/datasets/: base.py  sunrgbd.py
tests/: test_datasets.py  test_detection.py
